[gd_scene load_steps=4 format=3 uid="uid://djpq06ws07gy2"]

[ext_resource type="Script" path="res://system/game_ui.gd" id="1_fdgq7"]
[ext_resource type="Texture2D" uid="uid://bfskub16sltby" path="res://Assets/Sprites/victory_green.png" id="2_ojmkk"]
[ext_resource type="Texture2D" uid="uid://2rvk7kfloqx3" path="res://Assets/Sprites/victory_blue.png" id="3_a41a6"]

[node name="GameUI" type="CanvasLayer"]
script = ExtResource("1_fdgq7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 21.0
offset_top = 12.0
offset_right = 179.0
offset_bottom = 106.0

[node name="Player1Score" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.0470588, 0.533333, 0.278431, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 42
text = "Player 1: 0"

[node name="Player2Score" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.0470588, 0.411765, 0.54902, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 42
text = "Player 2: 0"

[node name="Time" type="Label" parent="."]
offset_left = 1402.0
offset_top = 18.0
offset_right = 1603.0
offset_bottom = 63.0
size_flags_horizontal = 8
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 38
text = "Time: 0:00.00"

[node name="ResultScreen1" type="TextureRect" parent="."]
visible = false
offset_right = 1640.0
offset_bottom = 900.0
texture = ExtResource("2_ojmkk")

[node name="RestartButton" type="Button" parent="ResultScreen1"]
offset_left = 435.0
offset_top = 416.0
offset_right = 1151.0
offset_bottom = 556.0
theme_override_font_sizes/font_size = 64
text = "Restart"

[node name="ResultScreen2" type="TextureRect" parent="."]
visible = false
offset_right = 1642.0
offset_bottom = 900.0
texture = ExtResource("3_a41a6")

[node name="RestartButton" type="Button" parent="ResultScreen2"]
layout_mode = 0
offset_left = 458.0
offset_top = 425.0
offset_right = 1174.0
offset_bottom = 565.0
theme_override_font_sizes/font_size = 64
text = "Restart"

[connection signal="pressed" from="ResultScreen1/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="ResultScreen2/RestartButton" to="." method="_on_restart_button_pressed"]
